nlamah/src/main/resources/org/nlamah/QBase/QL/test/error/doubleDeclaration2.ql
form test
{
	question2 text "test3"
	question2 text "test4"
}